apps/hello-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
        - name: hello-api
          image: 444975471869.dkr.ecr.ap-northeast-2.amazonaws.com/hello-api:latest
      imagePullSecrets:
      - name: aws-registry
