apps/hello-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
spec:
  selector:
    app: hello-api
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
