apps/hello-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: "hello.binaryflavor.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-api
            port:
              number: 3000
